--- a/main.css
+++ b/main.css
@@ -2,9 +2,14 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: Arial;
   line-height: 1.4;
+  font-size: 1.6rem;
   background: linear-gradient(
       rgba(256, 256, 256, 0.8),
       rgba(256, 256, 256, 0.8)
@@ -14,6 +19,7 @@ body {
   background-position: center;
   max-width: calc(100% - 40px);
   margin: auto;
+  padding-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -23,25 +29,20 @@ body {
     grid-template-rows: auto-fill 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
       'title title'
-      'address address'
-      'hours hours'
       'coffee espresso'
-      'tea bakery';
+      'tea bakery'
+      'address hours';
+    grid-gap: 20px;
   }
 }
 
-h1 {
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  font-size: 3rem;
-  grid-area: title;
+@media screen and (min-width: 1100px) {
+  body {
+    max-width: 1060px;
+  }
 }
 
-h2 {
-  font-size: 2rem;
-}
-
-address {
+.address {
   grid-area: address;
 }
 
@@ -63,4 +64,52 @@ address {
 
 .bakery {
   grid-area: bakery;
+}
+
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 6rem;
+  grid-area: title;
+  text-align: center;
+  margin: 20px 0;
+}
+
+h2 {
+  font-size: 2.4rem;
+  margin: 12px 0;
+}
+
+p.prices {
+  font-size: 1.4rem;
+  margin: 0;
+  margin-bottom: 12px;
+}
+
+p.note {
+  font-style: italic;
+  font-size: 1.4rem;
+  margin: 0;
+  margin-bottom: 12px;
+}
+
+dl {
+  margin: 0 0 12px 0;
+}
+
+dt {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  margin-bottom: 4px;
+}
+
+dd {
+  color: #666;
+  margin-left: 0;
+  font-size: 1.4rem;
+}
+
+dd p {
+  margin: 0;
+  margin-bottom: 8px;
 }
