--- a/main.css
+++ b/main.css
@@ -11,8 +11,9 @@ body {
   line-height: 1.4;
   font-size: 1.6rem;
   background: linear-gradient(
+      to bottom,
       rgba(256, 256, 256, 0.8),
-      rgba(256, 256, 256, 0.8)
+      rgba(256, 256, 256, 1) 80%
     ),
     url(https://assets.codepen.io/t-1/nathan-dumlao-6VhPY27jdps-unsplash.jpg);
   background-size: cover;
@@ -66,7 +67,7 @@ section {
 .hours {
   grid-area: hours;
   padding: 20px 0;
-  border-bottom: solid 1px #666;
+  border-bottom: solid 1px #bcaaa4;
 }
 .hours table {
   margin: auto;
@@ -93,17 +94,24 @@ h1 {
   grid-area: title;
   text-align: center;
   margin: 20px 0;
+  color: #4e342e;
 }
 
 h2 {
   font-size: 2.4rem;
   margin: 12px 0;
+  color: #6d4c41;
 }
 
 p.prices {
   font-size: 1.4rem;
+  background: #bcaaa4;
+  color: white;
+  padding: 8px;
   margin: 0;
   margin-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
 }
 
 p.note {
